fix break in pen and paper sketch

--- a/css/beginwell.css
+++ b/css/beginwell.css
@@ -305,7 +305,6 @@ h1 {
     margin-bottom: 8em;
     margin-left: -6em;
     margin-right: -6em;
-    background: linear-gradient(180deg, rgba(227, 120, 84, 0.3) 39.5%, rgba(255, 255, 255, 0) 99.69%), rgba(247, 164, 136, 0.8);
 }
 
 #pen-and-paper-support-content .feature-bar p {
